# bruker_reader

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/bruker_reader/: __init__.py  bruker_reader.py
src/bruker_reader/reader/: reader.py
