[project]
name = "bruker-reader"
version = "0.1.0"
description = "Reader for Bruker FTICR BAF files"
authors = [
    { name = "theinfinitegirl", email = "gretchenlynhall@gmail.com" }
]
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bruker_reader"]
